website.css
/* ... */
.text_side_bars_span{
    padding-left: 10px;
    padding-right: 10px;
    background-color: white;
}

/*-------------------------------------- END GLOBAL STYLES --------------------------------------*/


/*LANDER PAGE*/
.lander_container{
	display: inline-flex;
	width: 100%;
	height: 650px;
}
.text_and_photo_container{
	position: relative;
    margin-left: auto;
    margin-right: auto;
    top: 100px;
}
.lander_text{
	text-align: left;
    position: relative;
    display: inline-block;
    top: -180px;
    margin-left: 30px
}
#lander_greeting1{
	margin-bottom: 0px;
	margin-top: 130px;
}
#lander_greeting2{
	margin-top: 0px;
	width: 340px;
}
.second_lander_section{
	width: 100%;
	position: relative;
	background-color: #1D2022;
	background: url('imgs/line-pattern.png');
	color: #403838;
	height: 300px;
	top: -70px;
}
#second_lander_paragraph{
	font-family: 'Lato', sans-serif;
    font-weight: 100;
    letter-spacing: .2px;
    font-size: 19px;
    width: 550px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    padding-right: 100px;
    margin-top: 0px;
    margin-bottom: 0px;
    position: relative;
    top: 50%;
    padding-top: 30px;
    padding-bottom: 30px;
    padding-right: 30px;
    padding-left: 30px;
    transform: translateY(-50%);
    background-color: white;
}
.third_lander_section{
	text-align: center;
}
#third_lander_paragraph{
	width: 550px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 80px;
    font-size: 18px;
    color: black;
    font-weight: 300;
    letter-spacing: .5px;
}
#closing_landing_statment{
	width: 300px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 10px;
    margin-bottom: 15px;
}
.horizontal_divider_line{
	height: 2px;
	width: 200px;
	background-color: #D1D3D4;
	margin-right: auto;
	margin-left: auto;
}
/*-------------------------------------- END LANDER PAGE --------------------------------------*/

/*-------------------------------------- PORTFOLIO --------------------------------------*/
#porfolio_container{
	text-align: center;
	margin-top: 30px;
}
.preview_image{
	height: 250px;
	width: 400px;
	text-align: center;
	margin-left: 25px;
    margin-right: 25px;
    margin-top: 25px;
    margin-bottom: 25px;
    -webkit-box-shadow: 0px 0px 5px 1px rgba(196,196,196,1);
	-moz-box-shadow: 0px 0px 5px 1px rgba(196,196,196,1);
	box-shadow: 0px 0px 5px 1px rgba(196,196,196,1);
}

/*-------------------------------------- END PORTFOLIO --------------------------------------*/




/*-------------------------------------- INDIVIDUAL PROJECT PAGES --------------------------------------*/
.larger_project_image{
	width: 80%;
}
#project_description_text{
	font-size: 16px;
	width: 500px;
	margin-left: auto;
	margin-right: auto;
}
#project_name_text{
	margin-bottom: 30px;
	margin-top: 0px;
}
#long_project_name_text{
	font-size: 65px;
	margin-top: 0px;
	margin-bottom: 30px;
}
#project_link{
	position: relative;
	text-decoration: underline;
	font-size: 18px;
}
.next_project_link{
	font-size: 20px;
    border-right: 2px solid;
    border-left: 2px solid;
    padding-left: 15px;
    padding-right: 15px;
}
.next_project_link:hover{
    padding-left: 35px;
    padding-right: 35px;
    color: #F39431;
    -webkit-transition: padding-left .2s, padding-right .2s;
    transition: padding-left .2s, padding-right .2s;
}

/*-------------------------------------- END INDIVIDUAL PROJECT PAGES --------------------------------------*/



/*-------------------------------------- CONTACT --------------------------------------*/
#contactTextBox{
	margin-top: 80px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}
#contactTextBox h1{
	margin-top: 10px;
}
#email_me_button{
    font-size: 16px;
    background-color: #3FAFEC;
    padding: 15px 15px 15px 15px;
    border-radius: 5px;
    border: solid 0px #c9c9c9;
    text-transform: uppercase;
    text-decoration: none;
    -webkit-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);
    box-shadow: 0px 0px 20px -1px rgba(0,0,0,0.75);   
}
#contactTextBox a{
	color: white !important;
}

/*-------------------------------------- END CONTACT --------------------------------------*/


/*-------------------------------------- BLOG --------------------------------------*/

.blog_container{
	width: 100%;
	text-align: center;
}
.welcome_container{
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}
#posts{
    width: 100%;
    line-height: 0;
    border-bottom: 1px solid black;
    letter-spacing: 2px;
}
#posts_span{
    padding-left: 10px;
    padding-right: 10px;
    background-color: white;
}
.posts_container{
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}
.non_feature_post{
	width: 49.7%;
    height: 300px;
    background: url('imgs/floppy-disk-background.png');
    display: inline-block;
    text-align: left;
    vertical-align: top;
    position: relative;
}
.feature_post{
    width: 100%;
    display: inline-block;
    height: 350px;
    position: relative;
    text-align: left;
    background-color: rgb(46, 167, 140);
}
.feature_blog_post_title{
    font-family: 'Lato';
    font-size: 50px;
    color: white;
    text-transform: uppercase;
    font-weight: bolder;
    bottom: 0px;
    position: absolute;
    padding-left: 30px;
    padding-bottom: 20px;
}
.non_feature_blog_post_title{
    font-family: 'Lato';
    font-size: 30px;
    color: #2F2F2F;
    text-transform: uppercase;
    font-weight: bolder;
    padding-bottom: 20px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    text-align: center;
}
.feature_blog_post_title:hover{
	color: #2F2F2F;
	-webkit-transition: color .8s;
	transition: color .8s;
}
.non_feature_blog_post_title:hover{
	color: #D8625D;
	-webkit-transition: color .8s;
	transition: color .8s;
}
/* ... */

